--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Date de naissance:</strong> <span>10 avril 2005</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Date de naissance:</strong> <span>10 avril ....</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Site web:</strong> <a href="https://bia-banconle.netlify.app">Portfolio </a></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Téléphone:</strong> <span>+33 749904672</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Ville:</strong> <span>Valenciennes && Versailles</span></li>
@@ -100,7 +100,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>19 ans</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>....ans</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Etudes:</strong> <span>Formation ingénieur en apprentissage</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>banconle.akobi@uphf.fr</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Disponible</span></li>
