--- a/cv.html
+++ b/cv.html
@@ -81,17 +81,24 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>FISA 3 Informatique</h4>
-              <h5>2024 - 2025</h5>
-              <p><em>INSA Hauts-de-France</em></p>
-              <p>Formation ingénieure sous statut d'apprenti en informatique  => Formation dans un CFA + formation en entreprise</p>
+              <h4>Master en Informatique et Cybersécurité (FISA)</h4>
+              <h5>2024 - 2027</h5>
+              <p><em>Université Polytechnique Hauts-de-France - Mention Excellente</em></p>
+              <p>Formation ingénieure en alternance spécialisée en cybersécurité et développement. 4ème année sur 5 du programme d'ingénieur.</p>
             </div>
 
             <div class="resume-item">
-              <h4>Baccaulérat français options mathématiques &amp; physique</h4>
-              <h5>2022-2023</h5>
-              <p><em>Mention Très bien</em></p>
-              <p>Passionné par l'univers de la logique, j'ai rapidement opté pour un bac scientifque afin de me donner les bases nécéssaires pour attaquer le monde universitaire.</p>
+              <h4>Licence en Informatique</h4>
+              <h5>2022 - 2024</h5>
+              <p><em>Université Polytechnique Hauts-de-France - Mention Très Bien</em></p>
+              <p>Formation fondamentale en informatique avec spécialisation progressive vers la cybersécurité et le développement d'applications.</p>
+            </div>
+
+            <div class="resume-item">
+              <h4>Baccalauréat Scientifique</h4>
+              <h5>2022</h5>
+              <p><em>Mention Très Bien</em></p>
+              <p>Spécialisation en mathématiques et physique, base solide pour les études d'ingénieur.</p>
             </div>
 
           </div>
@@ -99,24 +106,28 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Expériences techniques</h3>
             <div class="resume-item">
-              <h4>Alternant Dev &amp; sys admin</h4>
-              <h5>2024 - 2027</h5>
-              <p><em>MagicRecycle/Smartfone.fr Mobisolutions</em></p>
+              <h4>Apprenti responsable informatique</h4>
+              <h5>Sept 2024 - Présent</h5>
+              <p><em>SEMR MagicRecycle</em></p>
               <ul>
-                <li>Gestion des projets d'évolutions informatiques de l'entreprise</li>
-                <li>Administration système + Cybersec</li>
-                <li>Développement backend sous symfony.</li>
+                <li>Développement et maintenance de fonctionnalités ERP (PHP/Symfony)</li>
+                <li>Intégration complète avec APIs (PrestaShop, OpenSi)</li>
+                <li>Migration de 3 PrestaShops (v1.7.7.7/1.7.7.8 vers v8.2 et v9)</li>
+                <li>Gestion d'infrastructure cloud (Scaleway) et optimisation des coûts</li>
+                <li>Amélioration SEO/UX-UI et performance des sites</li>
+                <li>Animation de sessions d'innovation et résolution de problèmes</li>
               </ul>
             </div>
 
             <div class="resume-item">
-              <h4>CTF Player(cybersec)</h4>
-              <h5>2022 - .... </h5>
-              <p><em>Tryhackme + ISC2</em></p>
+              <h4>Enthousiate Cybersécurité</h4>
+              <h5>2022 - Présent</h5>
+              <p><em>Bug Bounty & CTF - TryHackMe, ISC2</em></p>
               <ul>
-                <li>Pentesting web(Test de pénétration de systèmes informatiques).</li>
-                <li>OSINT, Gestion d'incident</li>
-                <li>Apprentissage continu</li>
+                <li>Bug Bounty Hunting et tests de sécurité web</li>
+                <li>Tests de pénétration et évaluation de vulnérabilités</li>
+                <li>Participation active aux CTF et challenges de sécurité</li>
+                <li>Certifications en cybersécurité (Security CC ISC2, Junior Penetration Tester)</li>
               </ul>
             </div>
 
