--- a/portfolio.html
+++ b/portfolio.html
@@ -220,6 +220,39 @@
               </div>
             </div>
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-cyberdefense">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/isc2.jpeg" class="img-fluid portfolio__image--size" alt="image de la certification Security CC ISC2">
+                <div class="portfolio-info">
+                  <h4>Security CC ISC2</h4>
+                  <p>Certification professionnelle en cybersécurité</p>
+                  <a href="assets/img/portfolio/isc2.png" title="Security CC ISC2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-pentesting">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/hacker1.jpeg" class="img-fluid portfolio__image--size" alt="image de certification Junior Penetration Tester">
+                <div class="portfolio-info">
+                  <h4>Junior Penetration Tester</h4>
+                  <p>Certification TryHackMe - Tests de pénétration</p>
+                  <a href="assets/img/portfolio/pentester.png" title="Junior Penetration Tester" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-dev">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/symfony_logo.jpeg" class="img-fluid portfolio__image--size" alt="image du projet E-commerce Symfony">
+                <div class="portfolio-info">
+                  <h4>E-commerce Symfony</h4>
+                  <p>Développement d'un site e-commerce complet</p>
+                  <a href="assets/img/portfolio/symfony.PNG" title="E-commerce Symfony" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
+            </div>
+
           </div>
 
         </div>
