--- a/about.html
+++ b/about.html
@@ -157,23 +157,23 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill"><span>HTML</span> <i class="val">80%</i></span>
+              <span class="skill"><span>PHP/Symfony</span> <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill"><span>CSS</span> <i class="val">60%</i></span>
+              <span class="skill"><span>Cybersécurité</span> <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill"><span>Bootstrap</span> <i class="val">65%</i></span>
+              <span class="skill"><span>Python</span> <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -182,23 +182,23 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill"><span>PHP/Symfony</span> <i class="val">50%</i></span>
+              <span class="skill"><span>JavaScript/Flutter</span> <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill"><span>Test de pénétration cybersécurité</span> <i class="val">40%</i></span>
+              <span class="skill"><span>Bug Bounty & Pentesting</span> <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill"><span>administration système</span> <i class="val">50%</i></span>
+              <span class="skill"><span>DevOps & Cloud</span> <i class="val">65%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -224,51 +224,58 @@
 
           <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="100">
             <div class="features-item">
-              <i class="bi bi-book text-warning"></i>
-              <h3><a href="https://github.com/BanconleAkobi/Moi/blob/main/LE%20MORSE%20(6).pdf" class="stretched-link">La lecture</a></h3>
+              <i class="fa-solid fa-shield-halved text-success"></i>
+              <h3><a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-5XFBYPITG9.png" class="stretched-link">Bug Bounty Hunting</a></h3>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="200">
             <div class="features-item">
-              <i class="bi bi-infinity text-primary" ></i>
-              <h3><a href="https://www.linkedin.com/in/banconl%C3%A9-akobi-a88940273/" class="stretched-link">La veille technologique</a></h3>
+              <i class="fa-solid fa-code text-primary"></i>
+              <h3><a href="https://github.com/BanconleAkobi/" class="stretched-link">Développement Full-Stack</a></h3>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="300">
             <div class="features-item">
-              <i class="fa-solid fa-user-secret text-danger"></i>
-              <h3><a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-5XFBYPITG9.png" class="stretched-link">la cybersécurité</a></h3>
+              <i class="fa-solid fa-cloud text-info"></i>
+              <h3><a href="https://www.linkedin.com/in/banconl%C3%A9-akobi-a88940273/" class="stretched-link">DevOps & Cloud</a></h3>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="400">
             <div class="features-item">
-              <i class="fa-solid fa-code text-secondary" ></i>
-              <h3><a href="" class="stretched-link">La programmation</a></h3>
+              <i class="fa-solid fa-mobile-screen text-warning"></i>
+              <h3><a href="https://github.com/BanconleAkobi/" class="stretched-link">Développement Mobile</a></h3>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="500">
             <div class="features-item">
-              <i class="fa-solid fa-diagram-project text-info" ></i>
-              <h3><a href="https://www.linkedin.com/in/banconl%C3%A9-akobi-a88940273/" class="stretched-link">La gestion de projet</a></h3>
+              <i class="fa-solid fa-database text-secondary"></i>
+              <h3><a href="https://www.linkedin.com/in/banconl%C3%A9-akobi-a88940273/" class="stretched-link">Bases de données</a></h3>
             </div>
           </div>
 
 
-          <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="1000">
+          <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="600">
+            <div class="features-item">
+              <i class="fa-solid fa-book text-warning"></i>
+              <h3><a href="https://github.com/BanconleAkobi/Moi/blob/main/LE%20MORSE%20(6).pdf" class="stretched-link">Développement personnel</a></h3>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="700">
             <div class="features-item">
               <i class="bi bi-dribbble text-danger"></i>
-              <h3><a href="" class="stretched-link">basketball</a></h3>
+              <h3><a href="" class="stretched-link">Basketball</a></h3>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="1000">
+          <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="800">
             <div class="features-item">
               <i class="fa-solid fa-quote-left text-info"></i>
-              <h3><a href="#citations" class="stretched-link">Les citations</a></h3>
+              <h3><a href="#citations" class="stretched-link">Philosophie</a></h3>
             </div>
           </div>
 
