--- a/cv.html
+++ b/cv.html
@@ -115,7 +115,7 @@
                 <li>Migration de 3 PrestaShops (v1.7.7.7/1.7.7.8 vers v8.2 et v9)</li>
                 <li>Gestion d'infrastructure cloud (Scaleway) et optimisation des coûts</li>
                 <li>Amélioration SEO/UX-UI et performance des sites</li>
-                <li>Animation de sessions d'innovation et résolution de problèmes</li>
+                <li>Gestion de projets avec approche "think out of the box" pour l'innovation</li>
               </ul>
             </div>
 
