--- a/blog.html
+++ b/blog.html
@@ -72,38 +72,92 @@
       </div>
       <!--Blogs-->
       <section class="container">
-                 <div class="row gy-4">
-                    <div class="col-md-4">
-                        <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">2025 : Faut-il encore apprendre PHP ? 🤔</h5>
-                            <p class="card-text">Le PHP est souvent décrié, mais reste une solution incontournable pour de nombreux développeurs. Découvrez pourquoi il est encore pertinent en 2025.</p>
-                            <button class="btn btn-primary" onclick="showArticle('article1')">Lire la suite</button>
-                        </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4">
-                        <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Les clés RSA et AES en danger ? 😱</h5>
-                            <p class="card-text">Une équipe de chercheurs chinois prétend avoir cassé les clés RSA grâce à l'informatique quantique. Que devons-nous en penser ?</p></br>
-                            <button class="btn btn-primary" onclick="showArticle('article2')">Lire la suite</button>
-                        </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4">
-                        <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Pour en savoir plus</h5>
-                            <p class="card-text">Suivez-moi sur LinkedIn pour plus d'actualités et de réflexions sur la technologie.</p></br></br>
-                            <button class="btn btn-primary" onclick="showArticle('article3')">Lire la suite</button>
-                        </div>
-                        </div>
-                    </div>
+        <div class="row gy-4">
+          <div class="col-lg-4 col-md-6">
+            <div class="card blog-card">
+              <div class="card-body">
+                <div class="blog-meta">
+                  <span class="blog-date">Jan 2025</span>
+                  <span class="blog-category">Cybersécurité</span>
                 </div>
+                <h5 class="card-title">L'IA va-t-elle tuer le Bug Bounty ? 🤖</h5>
+                <p class="card-text">Avec ChatGPT qui trouve des vulnérabilités en 2 minutes, est-ce que le Bug Bounty a encore un avenir ? Spoiler : oui, mais différemment...</p>
+                <button class="btn btn-primary" onclick="showArticle('article1')">Lire la suite</button>
+              </div>
             </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6">
+            <div class="card blog-card">
+              <div class="card-body">
+                <div class="blog-meta">
+                  <span class="blog-date">Jan 2025</span>
+                  <span class="blog-category">Dev</span>
+                </div>
+                <h5 class="card-title">Symfony 8 : Pourquoi j'ai dit adieu à Laravel 🚀</h5>
+                <p class="card-text">Après 2 ans avec Laravel, j'ai switché sur Symfony. Voici pourquoi ce framework français mérite plus d'amour qu'on ne le pense.</p>
+                <button class="btn btn-primary" onclick="showArticle('article2')">Lire la suite</button>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6">
+            <div class="card blog-card">
+              <div class="card-body">
+                <div class="blog-meta">
+                  <span class="blog-date">Déc 2024</span>
+                  <span class="blog-category">Cloud</span>
+                </div>
+                <h5 class="card-title">Scaleway vs AWS : Le match du siècle 💰</h5>
+                <p class="card-text">J'ai migré 3 PrestaShops sur Scaleway. Résultat ? 60% d'économies et zéro regret. Voici pourquoi les français font mieux que les américains.</p>
+                <button class="btn btn-primary" onclick="showArticle('article3')">Lire la suite</button>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6">
+            <div class="card blog-card">
+              <div class="card-body">
+                <div class="blog-meta">
+                  <span class="blog-date">Déc 2024</span>
+                  <span class="blog-category">Mobile</span>
+                </div>
+                <h5 class="card-title">Flutter vs React Native : Le verdict d'un dev backend 📱</h5>
+                <p class="card-text">En tant que dev PHP/Symfony, j'ai testé les deux. Spoiler : Flutter gagne haut la main. Voici pourquoi et comment j'ai build mon app de gestion de courses.</p>
+                <button class="btn btn-primary" onclick="showArticle('article4')">Lire la suite</button>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6">
+            <div class="card blog-card">
+              <div class="card-body">
+                <div class="blog-meta">
+                  <span class="blog-date">Nov 2024</span>
+                  <span class="blog-category">Cybersécurité</span>
+                </div>
+                <h5 class="card-title">Comment j'ai hacké mon propre site (et pourquoi c'est important) 🔒</h5>
+                <p class="card-text">Pentest de mon propre portfolio : SQL injection, XSS, CSRF... J'ai trouvé 7 vulnérabilités. Voici comment les corriger et pourquoi c'est crucial.</p>
+                <button class="btn btn-primary" onclick="showArticle('article5')">Lire la suite</button>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6">
+            <div class="card blog-card">
+              <div class="card-body">
+                <div class="blog-meta">
+                  <span class="blog-date">Nov 2024</span>
+                  <span class="blog-category">Carrière</span>
+                </div>
+                <h5 class="card-title">Alternance en cybersécurité : Mes 6 mois de galère et de réussite 🎯</h5>
+                <p class="card-text">De zéro à héros en 6 mois : comment j'ai appris la cybersécurité en alternance, mes erreurs, mes victoires et mes conseils pour réussir.</p>
+                <button class="btn btn-primary" onclick="showArticle('article6')">Lire la suite</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
             <div class="card my-5">
               <div class="card-body text-center ">
