--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpg" class="img-fluid h-50 rounded-4" alt="Ma photo">
+            <img src="assets/img/profile-img.jpeg" class="img-fluid h-50 rounded-4" alt="Ma photo">
           </div>
           <div class="col-lg-8 content">
             <h2>Apprenti ingénieur Informatique</h2>
