--- a/index.html
+++ b/index.html
@@ -26,6 +26,22 @@
 
 <body class="index-page">
 
+  <!-- Language Switcher -->
+  <div class="language-switcher">
+    <div class="container">
+      <div class="d-flex justify-content-end">
+        <div class="language-toggle">
+          <span class="language-label">FR</span>
+          <label class="switch">
+            <input type="checkbox" id="languageToggle">
+            <span class="slider round"></span>
+          </label>
+          <span class="language-label">EN</span>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
