changement of language

--- a/about.html
+++ b/about.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>A propos</title>
-  <meta name="description" content="partie about">
+  <title>About</title>
+  <meta name="description" content="about section">
 
   <link href="assets/img/favicon.png" rel="icon">
 
@@ -26,34 +26,18 @@
 
 <body class="about-page">
 
-  <!-- Language Switcher -->
-  <div class="language-switcher">
-    <div class="container">
-      <div class="d-flex justify-content-end">
-        <div class="language-toggle">
-          <span class="language-label">FR</span>
-          <label class="switch">
-            <input type="checkbox" id="languageToggle">
-            <span class="slider round"></span>
-          </label>
-          <span class="language-label">EN</span>
-        </div>
-      </div>
-    </div>
-  </div>
-
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <h1 class="sitename"> Mon portfolio</h1>
+        <h1 class="sitename">My Portfolio</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html" class="active">A propos</a></li>
-          <li><a href="cv.html">CV</a></li>
+          <li><a href="about.html" class="active">About</a></li>
+          <li><a href="cv.html">Resume</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -61,20 +45,21 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
+
     </div>
   </header>
 
   <main class="main">
 
-    <!-- Titre de la page -->
+    <!-- Page title -->
     <div class="page-title" data-aos="fade">
       <div class="heading">
         <div class="container">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
-              <h1>A propos</h1>
+              <h1>About</h1>
               <p class="mb-0">
-              Je suis banconlé AKOBI, apprenti ingénieur en informatique à l'INSA HDF . J'effectue mon alternance à Magicrecycle smartfone.fr, une entreprise spécialisée dans le rachat et la revente de mobiles.
+              I am banconlé AKOBI, a computer science engineering apprentice at INSA HDF. I am doing my apprenticeship at Magicrecycle smartfone.fr, a company specialized in buying and reselling mobile phones.
               </p>
             </div>
           </div>
@@ -84,42 +69,42 @@
         <div class="container">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">A propos</li>
+            <li class="current">About</li>
           </ol>
         </div>
       </nav>
     </div>
-    <!-- fin -->
+    <!-- end -->
 
-    <!-- Section  à propos -->
+    <!-- About section -->
     <section id="about" class="about section">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpeg" class="img-fluid h-50 rounded-4" alt="Ma photo">
+            <img src="assets/img/profile-img.jpeg" class="img-fluid h-50 rounded-4" alt="My photo">
           </div>
           <div class="col-lg-8 content">
-            <h2>Apprenti ingénieur Informatique</h2>
+            <h2>Computer Science Engineering Apprentice</h2>
             <p class="fst-italic py-3">
-              Je suis sous supervision d'un coach en informatique chargé du développemnt fullstack de l'application de l'entreprise. J'y fais également de l'administration système à laquelle s'ajoute de la cybersécurité(très primordiale).
+              I am under the supervision of a computer science coach responsible for full-stack development of the company's application. I also do system administration to which cybersecurity is added (very important).
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Date de naissance:</strong> <span>10 avril ....</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Site web:</strong> <a href="https://bia-banconle.netlify.app">Portfolio </a></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Téléphone:</strong> <span>+33 749904672</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Ville:</strong> <span>Valenciennes && Versailles</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Date of birth:</strong> <span>April 10th ....</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <a href="https://bia-banconle.netlify.app">Portfolio </a></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+33 749904672</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Valenciennes && Versailles</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>....ans</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Etudes:</strong> <span>Formation ingénieur en apprentissage</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>....years old</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Education:</strong> <span>Engineering apprenticeship training</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>banconle.akobi@uphf.fr</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Disponible</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
             </div>
@@ -141,7 +126,7 @@
             <i class="bi bi-emoji-smile"></i>
             <div class="stats-item">
               <span data-purecounter-start="0" data-purecounter-end="100" data-purecounter-duration="1" class="purecounter"></span>/100
-              <p>Bonne humeur</p>
+              <p>Good mood</p>
             </div>
           </div>
 
@@ -149,7 +134,7 @@
             <i class="bi bi-book"></i>
             <div class="stats-item">
               <span data-purecounteqr-start="0" data-purecounter-end="100" data-purecounter-duration="1" class="purecounter"></span>/100
-              <p>Travail</p>
+              <p>Work</p>
             </div>
           </div>
 
@@ -163,7 +148,7 @@
 
       <div class="container section-title" data-aos="fade-up">
         <h2>Skills</h2>
-        <div><span>Mes</span> <span class="description-title">compétences</span></div>
+        <div><span>My</span> <span class="description-title">skills</span></div>
       </div>
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -180,7 +165,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill"><span>Cybersécurité</span> <i class="val">75%</i></span>
+              <span class="skill"><span>Cybersecurity</span> <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -226,12 +211,12 @@
 
     </section>
 
-    <!--section de mes interets-->
+    <!--section of my interests-->
     <section id="interests" class="interests section">
 
       <div class="container section-title" data-aos="fade-up">
-        <h2>Caractéristiques</h2>
-        <div><span>Je suis </span> <span class="description-title">interessé par</span></div>
+        <h2>Characteristics</h2>
+        <div><span>I am </span> <span class="description-title">interested in</span></div>
       </div>
 
       <div class="container">
@@ -248,7 +233,7 @@
           <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="200">
             <div class="features-item">
               <i class="fa-solid fa-code text-primary"></i>
-              <h3><a href="https://github.com/BanconleAkobi/" class="stretched-link">Développement Full-Stack</a></h3>
+              <h3><a href="https://github.com/BanconleAkobi/" class="stretched-link">Full-Stack Development</a></h3>
             </div>
           </div>
 
@@ -262,14 +247,14 @@
           <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="400">
             <div class="features-item">
               <i class="fa-solid fa-mobile-screen text-warning"></i>
-              <h3><a href="https://github.com/BanconleAkobi/" class="stretched-link">Développement Mobile</a></h3>
+              <h3><a href="https://github.com/BanconleAkobi/" class="stretched-link">Mobile Development</a></h3>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="500">
             <div class="features-item">
               <i class="fa-solid fa-database text-secondary"></i>
-              <h3><a href="https://www.linkedin.com/in/banconl%C3%A9-akobi-a88940273/" class="stretched-link">Bases de données</a></h3>
+              <h3><a href="https://www.linkedin.com/in/banconl%C3%A9-akobi-a88940273/" class="stretched-link">Databases</a></h3>
             </div>
           </div>
 
@@ -277,7 +262,7 @@
           <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="600">
             <div class="features-item">
               <i class="fa-solid fa-book text-warning"></i>
-              <h3><a href="https://github.com/BanconleAkobi/Moi/blob/main/LE%20MORSE%20(6).pdf" class="stretched-link">Développement personnel</a></h3>
+              <h3><a href="https://github.com/BanconleAkobi/Moi/blob/main/LE%20MORSE%20(6).pdf" class="stretched-link">Personal Development</a></h3>
             </div>
           </div>
 
@@ -291,7 +276,7 @@
           <div class="col-lg-3 col-md-4" data-aos="fade-up" data-aos-delay="800">
             <div class="features-item">
               <i class="fa-solid fa-quote-left text-info"></i>
-              <h3><a href="#citations" class="stretched-link">Philosophie</a></h3>
+              <h3><a href="#citations" class="stretched-link">Philosophy</a></h3>
             </div>
           </div>
 
@@ -302,12 +287,12 @@
     </section>
 
 
-    <!-- section mes citations préférés-->
+    <!-- section my favorite quotes-->
     <section id="testimonials" class="testimonials section">
 
 
       <div class="container section-title" data-aos="fade-up">
-        <h2>Mes citations préférés</h2>
+        <h2>My Favorite Quotes</h2>
       </div>
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -338,13 +323,13 @@
               }
             }
           </script>
-          <div class="swiper-wrapper" id="citations">
+          <div class="swiper-wrapper" id="quotes">
 
             <div class="swiper-slide">
               <div class="testimonial-item" >
             <p>
               <i class=" bi bi-quote quote-icon-left"></i>
-                <span>Les méthodes sont les habitudes de l’esprit et les économies de la mémoire</span>
+                <span>Methods are the habits of the mind and the economies of memory</span>
                 <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/antoine.jpeg" class="testimonial-img" alt="photo de antoine rivarol">
@@ -357,7 +342,7 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Le bien ne fait pas du bruit, le bruit ne fait pas du bien</span>
+                  <span>Good doesn't make noise, noise doesn't make good</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/saint.jpeg" class="testimonial-img" alt="photo de Saint françois de Sales">
@@ -370,12 +355,12 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Le secret de la discipline est de définir qui vous êtes et de vous y tenir</span>
+                  <span>The secret of discipline is to define who you are and stick to it</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/andrew.jpeg" class="testimonial-img" alt="image de adrew, joueur de basketball">
                 <h3>Andrew Wiggins</h3>
-                <h4>Basketballeur</h4>
+                <h4>Basketball Player</h4>
               </div>
             </div>
 
@@ -386,22 +371,22 @@
 
       </div>
 
-    </section><!-- fin des citations-->
+    </section><!-- end of quotes-->
 
   </main>
 
 
   <footer id="footer" class="footer dark-background">
     <div class="container">
-      <h3 class="sitename">Vous savez quoi? </h3>
-      <p>Je suis juste passionné</p>
+      <h3 class="sitename">You know what? </h3>
+      <p>I am just passionate</p>
       <div class="social-links d-flex justify-content-center">
         <a href="https://github.com/BanconleAkobi/"><i class="bi bi-github"></i></a>
         <a href="https://www.linkedin.com/in/banconl%C3%A9-akobi-a88940273/"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
-          <strong class="px-1 sitename">Portfolio-Banconle</strong> <span>Tout droits réservés  </span>
+          <strong class="px-1 sitename">Portfolio-Banconle</strong> <span>All rights reserved</span>
         </div>
       </div>
     </div>
