--- a/cv.html
+++ b/cv.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>CV</title>
-  <meta name="description" content="partie cv AKOBI Banconlé">
+  <title>Resume</title>
+  <meta name="description" content="resume section AKOBI Banconlé">
 
   <link href="assets/img/favicon.png" rel="icon">
 
@@ -29,14 +29,14 @@
   <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
     <a href="index.html" class="logo d-flex align-items-center">
-      <h1 class="sitename"> Mon portfolio</h1>
+      <h1 class="sitename">My Portfolio</h1>
     </a>
 
     <nav id="navmenu" class="navmenu">
       <ul>
         <li><a href="index.html" >Home</a></li>
-        <li><a href="about.html">A propos</a></li>
-        <li><a href="cv.html" class="active">CV</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="cv.html" class="active">Resume</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="blog.html">Blog</a></li>
 
@@ -45,6 +45,7 @@
       </ul>
       <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
     </nav>
+
 
   </div>
 </header>
@@ -57,8 +58,8 @@
         <div class="container">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
-              <h1>Curicculum Vitae</h1>
-              <p class="mb-0">En savoir plus sur mon cursus</p>
+              <h1>Curriculum Vitae</h1>
+              <p class="mb-0">Learn more about my background</p>
             </div>
           </div>
         </div>
@@ -67,7 +68,7 @@
         <div class="container">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">CV</li>
+            <li class="current">Resume</li>
           </ol>
         </div>
       </nav>
@@ -81,53 +82,53 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master en Informatique et Cybersécurité (FISA)</h4>
+              <h4>Master in Computer Science and Cybersecurity (FISA)</h4>
               <h5>2024 - 2027</h5>
-              <p><em>Université Polytechnique Hauts-de-France - Mention Excellente</em></p>
-              <p>Formation ingénieure en alternance spécialisée en cybersécurité et développement. 4ème année sur 5 du programme d'ingénieur.</p>
+              <p><em>University of Technology Hauts-de-France - Excellent Mention</em></p>
+              <p>Engineering apprenticeship training specialized in cybersecurity and development. 4th year out of 5 of the engineering program.</p>
             </div>
 
             <div class="resume-item">
-              <h4>Licence en Informatique</h4>
+              <h4>Bachelor in Computer Science</h4>
               <h5>2022 - 2024</h5>
-              <p><em>Université Polytechnique Hauts-de-France - Mention Très Bien</em></p>
-              <p>Formation fondamentale en informatique avec spécialisation progressive vers la cybersécurité et le développement d'applications.</p>
+              <p><em>University of Technology Hauts-de-France - Very Good Mention</em></p>
+              <p>Fundamental training in computer science with progressive specialization towards cybersecurity and application development.</p>
             </div>
 
             <div class="resume-item">
-              <h4>Baccalauréat Scientifique</h4>
+              <h4>Scientific Baccalaureate</h4>
               <h5>2022</h5>
-              <p><em>Mention Très Bien</em></p>
-              <p>Spécialisation en mathématiques et physique, base solide pour les études d'ingénieur.</p>
+              <p><em>With High Honors</em></p>
+              <p>Specialization in mathematics and physics, solid foundation for engineering studies.</p>
             </div>
 
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <h3 class="resume-title">Expériences techniques</h3>
+            <h3 class="resume-title">Technical Experience</h3>
             <div class="resume-item">
-              <h4>Apprenti responsable informatique</h4>
-              <h5>Sept 2024 - Présent</h5>
+              <h4>IT Manager Apprentice</h4>
+              <h5>Sept 2024 - Present</h5>
               <p><em>SEMR MagicRecycle</em></p>
               <ul>
-                <li>Développement et maintenance de fonctionnalités ERP (PHP/Symfony)</li>
-                <li>Intégration complète avec APIs (PrestaShop, OpenSi)</li>
-                <li>Migration de 3 PrestaShops (v1.7.7.7/1.7.7.8 vers v8.2 et v9)</li>
-                <li>Gestion d'infrastructure cloud (Scaleway) et optimisation des coûts</li>
-                <li>Amélioration SEO/UX-UI et performance des sites</li>
-                <li>Gestion de projets avec approche "think out of the box" pour l'innovation</li>
+                <li>Development and maintenance of ERP features (PHP/Symfony)</li>
+                <li>Complete integration with APIs (PrestaShop, OpenSi)</li>
+                <li>Migration of 3 PrestaShops (v1.7.7.7/1.7.7.8 to v8.2 and v9)</li>
+                <li>Cloud infrastructure management (Scaleway) and cost optimization</li>
+                <li>SEO/UX-UI improvement and site performance</li>
+                <li>Project management with "think out of the box" approach for innovation</li>
               </ul>
             </div>
 
             <div class="resume-item">
-              <h4>Enthousiate Cybersécurité</h4>
-              <h5>2022 - Présent</h5>
+              <h4>Cybersecurity Enthusiast</h4>
+              <h5>2022 - Present</h5>
               <p><em>Bug Bounty & CTF - TryHackMe, ISC2</em></p>
               <ul>
-                <li>Bug Bounty Hunting et tests de sécurité web</li>
-                <li>Tests de pénétration et évaluation de vulnérabilités</li>
-                <li>Participation active aux CTF et challenges de sécurité</li>
-                <li>Certifications en cybersécurité (Security CC ISC2, Junior Penetration Tester)</li>
+                <li>Bug Bounty Hunting and web security testing</li>
+                <li>Penetration testing and vulnerability assessment</li>
+                <li>Active participation in CTF and security challenges</li>
+                <li>Cybersecurity certifications (Security CC ISC2, Junior Penetration Tester)</li>
               </ul>
             </div>
 
@@ -143,15 +144,15 @@
 
   <footer id="footer" class="footer dark-background">
     <div class="container">
-      <h3 class="sitename">L'expérience</h3>
-      <p>est la meilleure façon d'apprendre </p>
+      <h3 class="sitename">Experience</h3>
+      <p>is the best way to learn</p>
       <div class="social-links d-flex justify-content-center">
         <a href="https://github.com/BanconleAkobi/"><i class="bi bi-github"></i></a>
         <a href="https://www.linkedin.com/in/banconl%C3%A9-akobi-a88940273/"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
-          <strong class="px-1 sitename">Portfolio-Banconle</strong> <span>Tout droits réservés  </span>
+          <strong class="px-1 sitename">Portfolio-Banconle</strong> <span>All rights reserved</span>
         </div>
       </div>
     </div>
