--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Banconlé AKOBI-Portfolio</title>
-  <meta name="description" content="partie principale(index) AKOBI Banconlé">
+  <title>Banconlé AKOBI - Portfolio</title>
+  <meta name="description" content="main page (index) AKOBI Banconlé">
 
   <link href="assets/img/favicon.png" rel="icon">
 
@@ -26,34 +26,18 @@
 
 <body class="index-page">
 
-  <!-- Language Switcher -->
-  <div class="language-switcher">
-    <div class="container">
-      <div class="d-flex justify-content-end">
-        <div class="language-toggle">
-          <span class="language-label">FR</span>
-          <label class="switch">
-            <input type="checkbox" id="languageToggle">
-            <span class="slider round"></span>
-          </label>
-          <span class="language-label">EN</span>
-        </div>
-      </div>
-    </div>
-  </div>
-
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <h1 class="sitename"> Mon portfolio</h1>
+        <h1 class="sitename">My Portfolio</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="index.html" class="active" >Home</a></li>
-          <li><a href="about.html">A propos</a></li>
-          <li><a href="cv.html">CV</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="cv.html">Resume</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -62,17 +46,18 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
+
     </div>
   </header>
 
   <main class="main">
 
-    <!--  Ma section perso-->
+    <!--  My personal section-->
     <section id="hero" class="hero section dark-background">
       
       <div class="container" data-aos="zoom-out" data-aos-delay="100">
         <h2>Banconlé AKOBI</h2>
-        <p>Je suis <span class="typed" data-typed-items="Passionné, créatif, calme, optimiste">Apprenti ingénieur informatique</span><span class="typed-cursor typed-cursor--blink"></span></p>
+        <p>I am <span class="typed" data-typed-items="Passionate, creative, calm, optimistic">Computer Science Engineering Apprentice</span><span class="typed-cursor typed-cursor--blink"></span></p>
         <div class="social-links">
           <a href="https://github.com/BanconleAkobi/"><i class="bi bi-github"></i></a>
           <a href="https://www.linkedin.com/in/banconl%C3%A9-akobi-a88940273/"><i class="bi bi-linkedin"></i></a>
@@ -86,24 +71,24 @@
   <!-- Footer -->
   <footer id="footer" class="footer dark-background">
     <div class="container">
-      <h3 class="sitename">En une phrase, </h3>
-      <p>Je suis apprenti ingénieur informatique dans une entreprise sur Versailles et je suis réellement content d'allier théorie et pratique</p>
+      <h3 class="sitename">In one sentence, </h3>
+      <p>I am a computer science engineering apprentice in a company in Versailles and I am really happy to combine theory and practice</p>
       <div class="social-links d-flex justify-content-center">
         <a href="https://github.com/BanconleAkobi/"><i class="bi bi-github"></i></a>
         <a href="https://www.linkedin.com/in/banconl%C3%A9-akobi-a88940273/"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
-          <strong class="px-1 sitename">Portfolio-Banconle</strong> <span>Tout droits réservés  </span>
+          <strong class="px-1 sitename">Portfolio-Banconle</strong> <span>All rights reserved</span>
         </div>
       </div>
     </div>
   </footer>
 
-  <!-- petite fleche pour revenir en haut-->
+  <!-- small arrow to go back to top-->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  <!-- le  preloader -->
+  <!-- the preloader -->
   <div id="preloader"></div>
 
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
