--- a/blog.html
+++ b/blog.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Blog</title>
-  <meta name="description" content="partie cv">
+  <meta name="description" content="blog section">
 
   <link href="assets/img/favicon.png" rel="icon">
 
@@ -29,20 +29,21 @@
   <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
     <a href="index.html" class="logo d-flex align-items-center">
-      <h1 class="sitename"> Mon portfolio</h1>
+      <h1 class="sitename">My Portfolio</h1>
     </a>
 
     <nav id="navmenu" class="navmenu">
       <ul>
         <li><a href="index.html" >Home</a></li>
-        <li><a href="about.html">A propos</a></li>
-        <li><a href="cv.html" class="active">CV</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="cv.html">Resume</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="blog.html">Blog</a></li>
+        <li><a href="blog.html" class="active">Blog</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
       <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
     </nav>
+
 
   </div>
 </header>
@@ -54,8 +55,8 @@
           <div class="container">
             <div class="row d-flex justify-content-center text-center">
               <div class="col-lg-8">
-                <h1>Bienvenue sur mon Blog</h1>
-                <p>Découvrez mes réflexions, actualités et partages sur la technologie.</p>
+                <h1>Welcome to my Blog</h1>
+                <p>Discover my thoughts, news and shares about technology.</p>
               </div>
             </div>
           </div>
@@ -150,7 +151,7 @@
                   <span class="blog-date">Nov 2024</span>
                   <span class="blog-category">Carrière</span>
                 </div>
-                <h5 class="card-title">Alternance en cybersécurité : Mes 6 mois de galère et de réussite 🎯</h5>
+                <h5 class="card-title">Cybersecurity apprenticeship: My 6 months of struggle and success 🎯</h5>
                 <p class="card-text">De zéro à héros en 6 mois : comment j'ai appris la cybersécurité en alternance, mes erreurs, mes victoires et mes conseils pour réussir.</p>
                 <button class="btn btn-primary" onclick="showArticle('article6')">Lire la suite</button>
               </div>
@@ -186,7 +187,7 @@
       </div>
       <div class="container">
         <div class="copyright">
-          <strong class="px-1 sitename">Portfolio-Banconle</strong> <span>Tout droits réservés  </span>
+          <strong class="px-1 sitename">Portfolio-Banconle</strong> <span>All rights reserved</span>
         </div>
       </div>
     </div>
