--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Contact</title>
-  <meta name="description" content="partie contact AKOBI Banconlé">
+  <meta name="description" content="contact section AKOBI Banconlé">
 
   <link href="assets/img/favicon.png" rel="icon">
 
@@ -27,14 +27,14 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <h1 class="sitename"> Mon portfolio</h1>
+        <h1 class="sitename">My Portfolio</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="index.html"  >Home</a></li>
-          <li><a href="about.html">A propos</a></li>
-          <li><a href="cv.html">CV</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="cv.html">Resume</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="blog.html">Blog</a></li>
 
@@ -54,8 +54,8 @@
         <div class="container">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
-              <h1>Me Contacter</h1>
-              <p class="mb-0">N'hésitez pas à me contacter pour des besoins de collaborations ou pour des questions. </p>
+              <h1>Contact Me</h1>
+              <p class="mb-0">Don't hesitate to contact me for collaboration needs or questions.</p>
             </div>
           </div>
         </div>
@@ -153,15 +153,15 @@
    <!-- Footer -->
    <footer id="footer" class="footer dark-background">
     <div class="container">
-      <h3 class="sitename">En une phrase, </h3>
-      <p>Je suis apprenti ingénieur informatique dans une entreprise sur Versailles et je suis réellement content d'allier théorie et pratique</p>
+      <h3 class="sitename">In one sentence, </h3>
+      <p>I am a computer science engineering apprentice in a company in Versailles and I am really happy to combine theory and practice</p>
       <div class="social-links d-flex justify-content-center">
         <a href="https://github.com/BanconleAkobi/"><i class="bi bi-github"></i></a>
         <a href="https://www.linkedin.com/in/banconl%C3%A9-akobi-a88940273/"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
-          <strong class="px-1 sitename">Portfolio-Banconle</strong> <span>Tout droits réservés  </span>
+          <strong class="px-1 sitename">Portfolio-Banconle</strong> <span>All rights reserved</span>
         </div>
       </div>
     </div>
