--- a/portfolio.html
+++ b/portfolio.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Détails visuels</title>
-  <meta name="description" content="partie portfolio">
+  <title>Visual Details</title>
+  <meta name="description" content="portfolio section">
 
   <link href="assets/img/favicon.png" rel="icon">
 
@@ -29,14 +29,14 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <h1 class="sitename"> Portfolio</h1>
+        <h1 class="sitename">Portfolio</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="index.html" >Home</a></li>
-          <li><a href="about.html">A propos</a></li>
-          <li><a href="cv.html">CV</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="cv.html">Resume</a></li>
           <li><a href="portfolio.html" class="active">Portfolio</a></li>
           <li><a href="blog.html">Blog</a></li>
 
@@ -45,6 +45,7 @@
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
+
 
     </div>
   </header>
@@ -57,7 +58,7 @@
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
               <h1>Portfolio</h1>
-              <p class="mb-0">Versions imagées de mon portfolio avec mes certifications, mes hobbies,...</p>
+              <p class="mb-0">Visual versions of my portfolio with my certifications, hobbies,...</p>
             </div>
           </div>
         </div>
@@ -169,8 +170,8 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/morse.png" class="img-fluid portfolio__image--size" alt="image de mon livre: Le MORSE">
                 <div class="portfolio-info">
-                  <h4>Mon livre</h4>
-                  <p>Le Morse, mon livre sur le développement personnel</p>
+                  <h4>My book</h4>
+                  <p>The Morse, my book on personal development</p>
                   <a href="assets/img/portfolio/morse.png" title="morse" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 </div>
               </div>
@@ -247,7 +248,7 @@
                 <img src="assets/img/portfolio/symfony_logo.jpeg" class="img-fluid portfolio__image--size" alt="image du projet E-commerce Symfony">
                 <div class="portfolio-info">
                   <h4>E-commerce Symfony</h4>
-                  <p>Développement d'un site e-commerce complet</p>
+                  <p>Development of a complete e-commerce site</p>
                   <a href="assets/img/portfolio/symfony.PNG" title="E-commerce Symfony" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 </div>
               </div>
@@ -265,15 +266,15 @@
 
   <footer id="footer" class="footer dark-background">
     <div class="container">
-      <h3 class="sitename">Vous savez quoi? </h3>
-      <p>J'aime ce que je fais</p>
+      <h3 class="sitename">You know what? </h3>
+      <p>I love what I do</p>
       <div class="social-links d-flex justify-content-center">
         <a href="https://github.com/BanconleAkobi/"><i class="bi bi-github"></i></a>
         <a href="https://www.linkedin.com/in/banconl%C3%A9-akobi-a88940273/"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
-          <strong class="px-1 sitename">Portfolio-Banconle</strong> <span>Tout droits réservés  </span>
+          <strong class="px-1 sitename">Portfolio-Banconle</strong> <span>All rights reserved</span>
         </div>
       </div>
     </div>
